Icons for files without extenstions #459, Icons for file with only one extension #469, added icons to some new files and folders

--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -8,7 +8,11 @@ mp3:              audio
 ogg:              audio
 opus:             audio
 wav:              audio
+h:                c
 editorconfig:     conf
+chh:              cpp
+cxx:              cpp
+hpp:              cpp
 scss:             css
 docx:             doc
 gdoc:             doc
@@ -20,9 +24,14 @@ otf:              font
 ttf:              font
 woff:             font
 woff2:            font
+gitattributes:    git
 gitconfig:        git
 gitignore:        git
 gitignore_global: git
+gitkeep:          git
+gitmodules:       git
+gitreflog:        git
+wget-hsts:        history
 lhs:              hs
 avif:             image
 bmp:              image
@@ -41,6 +50,10 @@ webp:             image
 jar:              java
 properties:       json
 tsx:              jsx
+lesshst:          less
+depend:           makefile
+make:             makefile
+mk:               makefile
 license:          md
 markdown:         md
 mkd:              md
@@ -50,13 +63,20 @@ gslides:          ppt
 odp:              ppt
 pptx:             ppt
 ipynb:            py
+pxd:              py
 pyc:              py
+pyd:              py
+pyi:              py
+pyo:              py
+pyx:              py
 rdata:            r
 rds:              r
+rhistory:         r
 gemfile:          rb
 gemspec:          rb
 guardfile:        rb
 lock:             rb
+mkshrc:           rb
 procfile:         rb
 rakefile:         rb
 rspec:            rb
@@ -66,13 +86,31 @@ ru:               rb
 erb:              rubydoc
 slim:             rubydoc
 bash:             shell
+bash_aliases:     shell
+bash_completion:  shell
+bash_env:         shell
+bash_functions:   shell
 bash_history:     shell
+bash_logout:      shell
 bash_profile:     shell
 bashrc:           shell
+environment:      shell
 fish:             shell
+inputrc:          shell
+oh-my-zsh:        shell
+osh-update:       shell
+pre-oh-my-zsh:    shell
+profile:          shell
 sh:               shell
+zlogin:           shell
+zlogout:          shell
+zprofile:         shell
 zsh:              shell
+zsh-syntax-highlighting: shell
 zsh-theme:        shell
+zsh-update:       shell
+zsh_history:      shell
+zshenv:           shell
 zshrc:            shell
 stylus:           styl
 cls:              tex
@@ -83,6 +121,14 @@ mov:              video
 mp4:              video
 ogv:              video
 webm:             video
+exrc:             vim
+gvimrc:           vim
+vim-update:       vim
+vimbackup:        vim
+viminfo:          vim
+vimrc:            vim
+vimswap:          vim
+vimtags:          vim
 bat:              windows
 exe:              windows
 ini:              windows
@@ -93,6 +139,8 @@ xlsx:             xls
 xul:              xml
 yaml:             yml
 7z:               zip
+bz:               zip
+bz2:              zip
 gz:               zip
 rar:              zip
 tar:              zip
