--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -25,6 +25,7 @@ gform:        ""
 git:          ""
 go:           ""
 gruntfile.js: ""
+history:      ""
 hs:           ""
 html:         ""
 image:        ""
@@ -36,6 +37,7 @@ jsx:          ""
 less:         ""
 log:          ""
 lua:          ""
+makefile:     ""
 md:           ""
 mustache:     ""
 npmignore:    ""
@@ -62,7 +64,7 @@ ts:           ""
 twig:         ""
 txt:          ""
 video:        ""
-vim:          ""
+vim:          ""
 vue:          "﵂"
 windows:      ""
 xls:          ""
