--- a/lib/yaml/folders.yaml
+++ b/lib/yaml/folders.yaml
@@ -1,11 +1,46 @@
 .atom:    ""
+.cache:   ""
+.config:  ""
+.dotnet:  "󰪮"
 .git:     ""
 .github:  ""
+.local:   ""
+.mono:    "󰪮"
+.pyenv:   ""
+.rbenv:   ""
+.repo:    ""
+.ruby-lsp: ""
+.rustup:  ""
 .rvm:     ""
+.ssh:     "󰣀"
+.tmux:    ""
 .Trash:   ""
+.venv:    ""
+.vim:     ""
 .vscode:  ""
+.vscode-insiders: ""
+.vscode-r: ""
+.vscode-remote-containers: ""
+.vscode-server: ""
+.vscode-server-insiders: ""
+__pycache__: ""
 config:   ""
+coverage: ""
+dist-packages: ""
+eggs:     ""
+exe:      ""
 folder:   ""
+go:       ""
 hidden:   ""
 lib:      ""
+man:      "󰗚"
 node_modules: ""
+pkg:      ""
+site-packages: ""
+spec:     "󰙨"
+src:      "󰳐"
+test:     "󰙨"
+tests:    "󰙨"
+venv:     ""
+wheels:   ""
+
