updated icons for bak and git-credentials files

--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -24,6 +24,9 @@ otf:              font
 ttf:              font
 woff:             font
 woff2:            font
+gdb_history:      gdbinit
+gef.rc:           gdbinit
+git-credentials:  git
 gitattributes:    git
 gitconfig:        git
 gitignore:        git
