--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -3,6 +3,7 @@ android:      ""
 apple:        ""
 audio:        ""
 avro:         ""
+bak:          "󰁯"
 c:            ""
 clj:          ""
 coffee:       ""
@@ -21,6 +22,7 @@ epub:         ""
 erl:          ""
 file:         ""
 font:         ""
+gdbinit:      ""
 gform:        ""
 git:          ""
 go:           ""
