--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -62,6 +62,7 @@ shell:        ""
 sqlite3:      ""
 styl:         ""
 tex:          ""
+tmp:          "󰿸"
 ts:           ""
 twig:         ""
 txt:          ""
@@ -72,5 +73,6 @@ windows:      ""
 xls:          ""
 xml:          ""
 yarn.lock:    ""
+yarnrc:       ""
 yml:          ""
 zip:          ""
