--- a/lib/yaml/folders.yaml
+++ b/lib/yaml/folders.yaml
@@ -1,11 +1,14 @@
 .atom:    ""
+.bundle:  ""
 .cache:   ""
+.cargo:   "󱣘"
 .config:  ""
 .dotnet:  "󰪮"
 .git:     ""
 .github:  ""
 .local:   ""
 .mono:    "󰪮"
+.npm:     ""
 .pyenv:   ""
 .rbenv:   ""
 .repo:    ""
@@ -27,6 +30,7 @@ __pycache__: ""
 config:   ""
 coverage: ""
 dist-packages: ""
+downloads: ""
 eggs:     ""
 exe:      ""
 folder:   ""
@@ -35,6 +39,7 @@ hidden:   ""
 lib:      ""
 man:      "󰗚"
 node_modules: ""
+pictures: ""
 pkg:      ""
 site-packages: ""
 spec:     "󰙨"
