--- a/lib/yaml/files.yaml
+++ b/lib/yaml/files.yaml
@@ -37,6 +37,7 @@ js:           ""
 json:         ""
 jsx:          ""
 less:         ""
+lock:         ""
 log:          ""
 lua:          ""
 makefile:     ""
@@ -53,7 +54,7 @@ py:           ""
 r:            ""
 rb:           ""
 rdb:          ""
-react:        "ﰆ"
+react:        ""
 rss:          ""
 rubydoc:      ""
 sass:         ""
@@ -68,7 +69,7 @@ twig:         ""
 txt:          ""
 video:        ""
 vim:          ""
-vue:          "﵂"
+vue:          "󰡄"
 windows:      ""
 xls:          ""
 xml:          ""
