--- a/lib/yaml/folders.yaml
+++ b/lib/yaml/folders.yaml
@@ -1,11 +1,12 @@
 .atom:    ""
+.bash:    "󰴉"
 .bundle:  ""
 .cache:   ""
 .cargo:   "󱣘"
 .config:  ""
 .dotnet:  "󰪮"
-.git:     ""
-.github:  ""
+.git:     ""
+.github:  ""
 .local:   ""
 .mono:    "󰪮"
 .npm:     ""
@@ -30,7 +31,7 @@ __pycache__: ""
 config:   ""
 coverage: ""
 dist-packages: ""
-downloads: ""
+downloads: "󰉍"
 eggs:     ""
 exe:      ""
 folder:   ""
@@ -39,7 +40,7 @@ hidden:   ""
 lib:      ""
 man:      "󰗚"
 node_modules: ""
-pictures: ""
+pictures: "󰉏"
 pkg:      ""
 site-packages: ""
 spec:     "󰙨"
