--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -22,7 +22,11 @@ jobs:
     strategy:
       matrix:
         ruby-version: ['2.6', '2.7', '3.0', '3.1']
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os:
+          - ubuntu-latest
+          - macos-latest
+          # FIXME: builds on Windows are broken because of hpricot
+          # - windows-latest
 
     steps:
     - uses: actions/checkout@v2
