add gem file alias

--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -75,6 +75,7 @@ pyx:              py
 rdata:            r
 rds:              r
 rhistory:         r
+gem:              rb
 gemfile:          rb
 gemspec:          rb
 guardfile:        rb
