apply JavaScript icon to .mjs file

--- a/lib/yaml/file_aliases.yaml
+++ b/lib/yaml/file_aliases.yaml
@@ -39,6 +39,7 @@ svg:              image
 tiff:             image
 webp:             image
 jar:              java
+mjs:              js
 properties:       json
 tsx:              jsx
 license:          md
